# SedcupRep

./: README.md  Something.md  function.cpp
C++Client/: .gitignore  README.md
C++Client/src/: CMakeLists.txt  config.json  function.cpp  function.h  main.cpp
C++Client/src/include/: seedcup.h
C++Client/src/include/elements/: packet.h  parse.h
C++Client/src/include/net/: client.h
C++Client/src/util/: config.h
Seedcup/: Something.md
Seedcup/C++Client/src/: config.json  main.cpp
Seedcup/C++Client/src/include/elements/: parse.h
Seedcup/Server&PyClient/: config.json
Seedcup/Server&PyClient/client/python/: ui.py
Server&PyClient/: 2023种子杯赛题.md  config.json
Server&PyClient/client/python/: main.py  ui.py
